--- a/Portfolio Website May 13 2022/home.html
+++ b/Portfolio Website May 13 2022/home.html
@@ -3,7 +3,7 @@
     <head>
     <title>Portfolio Website</title>
 
-    <link rel="stylesheet" href="styling/mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
     <link rel="stylesheet" href="styling/rquery.css">
    
     </head>
