--- a/Portfolio Website May 13 2022/reg.html
+++ b/Portfolio Website May 13 2022/reg.html
@@ -38,6 +38,12 @@
                          <input type="text" id="mail" size="60" name="array[]" placeholder="Email" required>
                        </div>
                        <br>
+
+                       <div>
+                        
+                        <input type="text" id="phone" size="60" name="array[]" placeholder="Phone numbers" required>
+                      </div>
+                      <br>
                        <div>
                          
                          <input type="password" id="Password" size="60" name="array[]" placeholder="Password" required>
