--- a/Portfolio Website May 13 2022/reg.html
+++ b/Portfolio Website May 13 2022/reg.html
@@ -66,6 +66,6 @@
                  
                </div>
         </body>
-        <script src="myscripts/log.js"></script>
+        <script src="log.js"></script>
 
     </html>
